fix: issue with wrong height in  full witdh mode

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -19,8 +19,21 @@ div[tabindex='-1']:focus {
 html,
 body {
   overscroll-behavior-x: none;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+  padding: 0;
+  margin: 0;
 }
 
 .react-split > .split-container.vertical > .splitter {
   z-index: 1;
+}
+
+#root {
+  height: 100%;
 }
